--- a/css/projects.css
+++ b/css/projects.css
@@ -129,6 +129,7 @@
     .slider {
         display: flex;
         width: 100%;
+        height: auto;
     }
     .slide img {
         max-width:100%;
@@ -138,10 +139,10 @@
     }
     .slides {
         width: 100%;
-        height: 400px;
+        height: auto;
         display: flex;
         flex-direction: column;
-        position: absolute;
+        
     }
     .navigation__auto div {
         display: none;
