--- a/css/skills.css
+++ b/css/skills.css
@@ -39,7 +39,7 @@
         margin-left: 10px;
     }
     .skill__cards img {
-        background-color: yellow;
+        background-color: rgb(201, 201, 14);
         width: 30px;
         height: 30px;
         border-radius: 5px;
