--- a/css/about.css
+++ b/css/about.css
@@ -118,5 +118,9 @@
         display: flex;
         flex-direction: column;
     
-}
+    }
+    .content__text h1 {
+        
+        color: rgb(206, 206, 35);
+    }
 }
