Update color content h1

--- a/css/about.css
+++ b/css/about.css
@@ -85,7 +85,7 @@
     
     .content__text h1 {
         font-size: 2rem;
-        color: red;
+        color: rgb(206, 206, 35);
 
     }
     .content {
