--- a/css/formation.css
+++ b/css/formation.css
@@ -61,7 +61,7 @@
         justify-content: space-around;
         align-items: center;
         margin: 10px 30px;
-        border: 2px solid yellow;
+        border: 2px solid rgb(165, 165, 29);
         border-radius: 15px;
     
     }
