--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -40,7 +40,7 @@
     }
     .hobbies__cards {
         background-color: #ffffff;
-        border: 2px solid yellow;
+        border: 2px solid rgb(165, 165, 29);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -50,7 +50,7 @@
         
     }
     .hobbies img {
-        background-color: yellow;
+        background-color: rgb(165, 165, 29);
         width: 30px;
         height: 30px;
         border-radius: 5px;
