--- a/css/skills.css
+++ b/css/skills.css
@@ -19,10 +19,13 @@
     margin: 35px;
 }
 .skill__cards img {
-    background-color: yellow;
+    
     width: 60px;
     height: 60px;
     border-radius: 10px;
+}
+.skill__cards img {
+    filter: invert(94%) sepia(31%) saturate(2785%) hue-rotate(359deg) brightness(93%) contrast(87%);
 }
 
 /*=========Responsive===========*/
@@ -39,7 +42,7 @@
         margin-left: 10px;
     }
     .skill__cards img {
-        background-color: rgb(165, 165, 29);
+        background-color: none;
         width: 30px;
         height: 30px;
         border-radius: 5px;
