--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(255, 255, 0, 0.705);
+    border-top: 2px solid yellow;
 }
 
 footer p {
