--- a/css/header.css
+++ b/css/header.css
@@ -29,12 +29,7 @@ header {
 /* ======== Responsive ==========*/
 
 @media screen and (max-width: 425px) {
-    .list {
+    header {
         display: none;
-    }
-    .logo {
-        font-size: 10px;
-        padding: 10px;
-        color: rgb(165, 165, 29);
     }
 }
