--- a/css/formation.css
+++ b/css/formation.css
@@ -8,7 +8,8 @@
     display: grid;
     grid-template-columns: 33.3% 33.3% 33.3% ;
     grid-template-rows: 100%;
-    background: url("images/banner_formation.jpg") center / cover no-repeat;
+    background: url("images/banner_formation.jpg") center / cover no-repeat ;
+    box-shadow: inset 0 0 30px 15px #000000;
 }
 .formation__cards {
   
