--- a/css/about.css
+++ b/css/about.css
@@ -86,7 +86,7 @@
     
     .content__text h1 {
         font-size: 2.3rem;
-        color: rgb(165, 165, 29);
+        color: #FFD200;
 
     }
     .content {
