--- a/css/contact.css
+++ b/css/contact.css
@@ -76,7 +76,7 @@
         
     }
     .contact__input button {
-        border: 2px solid rgb(165, 165, 29);
+        border: 2px solid #FFD200;
         font-fa
     }
   }
