--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top: 2px solid yellow;
+    border-top: 2px solid var(--color--yellow);
 }
 
 footer p {
