--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -8,8 +8,10 @@
     color: #ffffff;
 }
 .hobbies__cards {
-    background-color: #ffffff;
-    border: 2px solid #dddd10;
+    background: #232526; 
+    background: -webkit-linear-gradient(to right, #414345, #232526); 
+    background: linear-gradient(to right, #414345, #232526); 
+    border: 0.5px solid rgb(77, 76, 76);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,7 +21,7 @@
 
 }
 .hobbies__cards img {
-    filter: invert(94%) sepia(31%) saturate(2785%) hue-rotate(359deg) brightness(93%) contrast(87%);
+    filter: invert(97%) sepia(77%) saturate(7490%) hue-rotate(338deg) brightness(96%) contrast(109%);
 }
 
 .hobbies img {
@@ -44,8 +46,7 @@
         color: #ffffff;
     }
     .hobbies__cards {
-        background-color: #ffffff;
-        border: 2px solid #FFD200;
+       
         display: flex;
         flex-direction: column;
         align-items: center;
