--- a/css/skills.css
+++ b/css/skills.css
@@ -5,12 +5,15 @@
     grid-template-rows: 100%;
 }
 #skills__hobbies h1 {
-    color: #ffffff;
+    color: #e7e1e1;
     padding: 25px;
+    
 }
 .skill__cards {
-    background-color: #ffffff;
-    border: 2px solid yellow;
+    background: #232526; 
+    background: -webkit-linear-gradient(to right, #414345, #232526); 
+    background: linear-gradient(to right, #414345, #232526); 
+    border: 0.5px solid rgb(77, 76, 76);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -19,7 +22,7 @@
     margin: 35px;
 }
 .skill__cards img {
-    filter: invert(94%) sepia(31%) saturate(2785%) hue-rotate(359deg) brightness(93%) contrast(87%);
+    filter: invert(97%) sepia(77%) saturate(7490%) hue-rotate(338deg) brightness(96%) contrast(109%);
     width: 60px;
     height: 60px;
     border-radius: 10px;
@@ -47,8 +50,7 @@
         
     }
     .skill__cards {
-        background-color: #ffffff;
-        border: 2px solid #FFD200;
+     
         display: flex;
         flex-direction: column;
         align-items: center;
