--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&display=swap');
+:root {
+    --color--yellow: #FEE20D;
+}
 
-  
 html {
     scroll-behavior: smooth;
 }
@@ -15,7 +17,7 @@ body {
     bottom: 0;
     right: 0;
     width: 70px;
-    filter: invert(94%) sepia(31%) saturate(2785%) hue-rotate(359deg) brightness(93%) contrast(87%);
+    filter: invert(97%) sepia(77%) saturate(7490%) hue-rotate(338deg) brightness(96%) contrast(109%);
     border-radius: 50%;
     padding: 5px;
 }
